--- a/index.html
+++ b/index.html
@@ -245,6 +245,23 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
 ================================================== -->
 <hr>
 <footer class="footer">
+  <h3 class="text-center"><a name="wall"></a><strong> Wall of Works</strong></h3>
+  <section id="photos">
+    <img src="https://raw.githubusercontent.com/yihui-he/lip-tracking-with-snake-active-contour-and-particle-filter/master/pic.png" />
+    <img src="https://raw.githubusercontent.com/yihui-he/Edge-detection-with-zero-crossing/master/lena_1.bmp" />
+    <img src="https://raw.githubusercontent.com/yihui-he/3D-reconstruction/master/result/selfff.png" />
+    <img src="./assets_files/cs188.png" />
+    <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/person.jpg.png" />
+    <img src="http://students.iitk.ac.in/robocon/images/sliders/master/bg-5.jpg" />
+    <img src="./assets_files/vehicle.png" />
+    <img src="https://raw.githubusercontent.com/yihui-he/Depth-estimation-with-neural-network/master/presentation/stereo.png?token=AJkBS_A-YWaMd9vcgEQuaXQWe9wmjtTBks5XWM07wA%3D%3D" />
+    <img src="https://raw.githubusercontent.com/yihui-he/deep-learning-guide/master/presentation/resnet.png" />
+    <img src="https://raw.githubusercontent.com/yihui-he/deep-learning-guide/master/presentation/kmeans.jpg" />
+    <img src="./assets_files/shuttle.png" />
+    <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/gaoxin.jpg" />
+    <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/artwork.jpg" />
+  </section>
+
   <a target="_blank" href="https://github.com/yihui-he/panorama"><img src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
 </footer>
 
