--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       </p>
       <p>
         I've interned at <a href="http://www.deepglint.com/en/">DeepGlint</a> as Computer Vision engineer, <a href="https://en.wikipedia.org/wiki/Baidu">Baidu</a> as AI researcher. I studied at <a href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a> grad school as an exchange student.</p>
-      <p>Here's my <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>. I'm interested in job, internship and research opportunity, available for more than 1 year.
+      <p>Here's my <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>. 
+      I'm interested in research opportunity, internship and job.(available for more than 1 year)
       </p>
 
 
