--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
     <img src="./assets_files/shuttle.png" />
     <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/gaoxin.jpg" />
     <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/artwork.jpg" />
+    <img src="./assets_files/ocsi.png" />
   </section>
 
   <a target="_blank" href="https://github.com/yihui-he/panorama"><img src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
