--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- <!DOCTYPE html> -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <title>Yihui He, CS undergrad interested in Computer vision & Deep Learning</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +14,18 @@
   <![endif]-->
   <link rel="icon" href="./assets_files/favicon.ico"></head>
 
+<div class="visible-phone" id="blackBar">
+  <a href="#top">About</a>
+  <!--<a href="#research">Research</a>-->
+  <a href="#publications">Publications</a>
+  <a href="#projects">Projects</a>
+  <!--<a href="#teaching">Teaching</a>-->
+  <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>
+</div>
+
 <body data-feedly-mini="yes">
 
-<div class="container span3">
+<div class="container span3 hidden-phone">
   <div id="floating_sidebar" class="span3">
     <!-- We use a fancy nav bar if there is enough space -->
     <!--<hr class="hidden-phone">-->
@@ -51,14 +59,7 @@
     </div>
 
     <!-- Otherwise, we simply use a flat list of links -->
-    <div class="visible-phone">
-      <a href="#top">About</a>
-      <!--<a href="#research">Research</a>-->
-      <a href="#publications">Publications</a>
-      <a href="#projects">Projects</a>
-      <!--<a href="#teaching">Teaching</a>-->
-      <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>
-    </div>
+
   </div>
 </div>
 
@@ -68,6 +69,7 @@
   <div class="row">
 
     <div class="span9">
+      <br>
       <h3>
         Yihui He (何宜晖)
       </h3>
