--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         I'm a Computer Science 2nd-year undergrad from <a href="https://en.wikipedia.org/wiki/Xi%27an_Jiaotong_University">Xi'an Jiaotong University</a>, with my interest focus on Computer Vision, Deep Learning and Network Security.
       </p>
       <p>
-        I've interned at <a href="http://www.deepglint.com/en/">DeepGlint</a> as Computer Vision engineer, <a href="https://en.wikipedia.org/wiki/Baidu">Baidu</a> as AI researcher. I studied at <a href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a> grad school as an exchange student.</p>
+        I've interned at <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> as Computer Vision engineer, <a target="_blank" href="https://en.wikipedia.org/wiki/Baidu">Baidu</a> as AI researcher. I studied at <a target="_blank" href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a> grad school as an exchange student.</p>
       <p>Here's my <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>. 
       I'm interested in research opportunity, internship and job.(available for more than 1 year)
       </p>
@@ -119,7 +119,7 @@
         <a name="publications"></a> Recent Publications
       </h3>
       <p>
-        Links to Google Scholar <a href="https://scholar.google.com/citations?user=z2w3scIAAAAJ&amp;hl=en" target="_blank">[Not Available now]</a>
+        Links to Google Scholar <a target="_blank" href="https://scholar.google.com/citations?user=z2w3scIAAAAJ&amp;hl=en" target="_blank">[Not Available now]</a>
         <!--<a href="projects.html"> [Unpublished Projects]</a>-->
       </p>
       <div class="media">
