--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <!--<a href="projects.html"> [Unpublished Projects]</a>-->
       </p>
       <div class="media">
-        <a target="_blank" href="./assets_files/vehicle.png">
+        <a class="pull-left">
           <img class="media-object" src="./assets_files/vehicle.png" width="96px" height="96px">
         </a>
         <div class="media-body">
