--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="text-center hidden-phone">
       <img src="assets_files/me.png" alt="photo" class="logo-image">
       <br><br>
-      <a href="mailto:yihuihe@foxmail.com">yihuihe@foxmail.com</a><br>
+      yihuihe at foxmail 。com <br>
       <img src="./assets_files/GitHub-Mark.png" class="icon-adjust" > <a target="_blank" href="http://www.github.com/yihui-he">Github</a> <img src="./assets_files/linkedin.png" class="icon-adjust" > <a target="_blank" href="https://www.linkedin.com/in/yihui-he-a4257aab">Linkedin</a><br>
 
       <img src="./assets_files/cssi_zhihu-512.png" class="icon-adjust"> <a target="_blank" href="https://www.zhihu.com/people/rex686568">知乎</a><br>
@@ -74,7 +74,7 @@
         Yihui He (何宜晖)
       </h3>
       <h5>
-        <a href="mailto:yihuihe@foxmail.com">yihuihe@foxmail.com</a>
+        yihuihe at foxmail 。com</a>
       </h5>
       <!-- Do I want to show a pic on the phone screen?
       <div class="text-center visible-phone">
@@ -130,7 +130,7 @@
           <p class="media-heading">
             <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security Surveillance</strong><br>
             Xiaobo Ma, Yihui He, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-            <a href="mailto:yihuihe@foxmail.com">[Contact me if interested]</a>  under review, IEEE Network
+            [Contact me if interested]  under review, IEEE Network
           </p>
           <p class="abstract-text">
             Security surveillance is one of the most important issues in smart cities, especially in an era of
