--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
 
       <div class="media-body">
       <p class="media-heading">
-      <strong><a target="_blank" href="https://github.com/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans">Single-Layer-neural-network-with-PCAwhitening-Kmeans</a></strong> <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[Report]</a>
+      <strong><a target="_blank" href="https://github.com/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans">Single Layer neural network with PCAwhitening Kmeans</a></strong> <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[Report]</a>
       <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/deep-learning-guide/blob/master/presentation/mp12.pdf">[Slides]</a>
       </p>
       <p class="abstract-text">
@@ -228,6 +228,21 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
       </div>
       </div>
 
+      <div class="media">
+        <a class="pull-left">
+          <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/person.jpg.png" width="96px" height="96px">
+        </a>
+
+      <div class="media-body">
+      <p class="media-heading">
+      <strong><a target="_blank" href="https://github.com/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset">Objects Detection with YOLO on Artwork Dataset</a></strong> <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset/blob/master/Report_Yihui.pdf">[Report]</a>
+      </p>
+      <p class="abstract-text">
+      I design a small object detection network, which is simplified from YOLO(You Only Look Once) network. It's trained on PASCAL VOC. I evaluate it on an artwork dataset(Picasso dataset). With the best parameters, I got 40% precision and 35% recall.
+      </p>
+      </div>
+      </div>
+      
       <div class="media">
         <a class="pull-left">
           <img class="media-object" src="./assets_files/shuttle.png" width="96px" height="96px">
