--- a/index.html
+++ b/index.html
@@ -191,7 +191,24 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
           </p>
         </div>
       </div>
-
+      
+      <div class="media">
+        <a class="pull-left">
+          <img class="media-object" src="https://www.kaggle.io/svf/310043/4567203286d71c8fd31cf12668a3ceac/__results___files/__results___5_0.png" width="96px" height="96px">
+        </a>
+        <div class="media-body">
+          <p class="media-heading">
+            <strong>
+              <a target="_blank" href="https://github.com/yihui-he/Ultrasound-Nerve-Segmentation">Medical Image Segmentation: A survey</a>
+            </strong>
+            <a target="_blank" href="https://github.com/yihui-he/medical-image-segmentation-a-survey/blob/master/README.md">[Summary]</a>
+          </p>
+          <p class="abstract-text">
+            I evaluate DeepMask, Deeplab, U-net and MNC for medical image segmentation. I ranked <strong>19%</strong> on <a target="_blank" href="https://www.kaggle.com/c/ultrasound-nerve-segmentation/leaderboard/private">Kaggle Ultrasound Nerve Segmentation</a>
+          </p>
+        </div>
+      </div>
+      
       <div class="media">
         <a class="pull-left">
           <img class="media-object" src="https://raw.githubusercontent.com/yihui-he/deep-learning-guide/master/presentation/resnet.png" width="96px" height="96px">
