--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Link to my <a target="_blank" href="https://github.com/yihui-he">[github public 
             <a target="_blank" href="https://github.com/yihui-he/medical-image-segmentation-a-survey/blob/master/README.md">[Summary]</a>
           </p>
           <p class="abstract-text">
-            I evaluate DeepMask, Deeplab, U-net and MNC for medical image segmentation. I ranked <strong>19%</strong> on <a target="_blank" href="https://www.kaggle.com/c/ultrasound-nerve-segmentation/leaderboard/private">Kaggle Ultrasound Nerve Segmentation</a>
+            I evaluate DeepMask, Deeplab and MNC for medical image segmentation. I ranked <strong>19%</strong> on <a target="_blank" href="https://www.kaggle.com/c/ultrasound-nerve-segmentation/leaderboard/private">Kaggle Ultrasound Nerve Segmentation</a>
           </p>
         </div>
       </div>
