--- a/index.html
+++ b/index.html
@@ -366,8 +366,10 @@
                 <a target="_blank" href="https://github.com/yihui-he/panorama"><img
                         src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
             </footer>
+        </div>
+    </div>
+</div>
 </body>
-<div></div>
 </html>
 
 <!-- Le javascript
