--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 grad school as an exchange student.</p>
             <p>Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>.
-                I'm interested in research opportunity, internship and job.(available for more than 1 year)
+                I'm interested in research opportunity, internship, and PhD program.
             </p>
 
 
@@ -339,9 +339,6 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
             <!-- Footer
             ================================================== -->
             <hr>
@@ -368,7 +365,9 @@
                 <a target="_blank" href="https://github.com/yihui-he/panorama"><img
                         src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
             </footer>
-
+        </div>
+    </div>
+</div>
 </body>
 </html>
 
