--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 grad school as an exchange student.</p>
             <p>Here's my <a target="_blank"
                             href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>.
-                I'm interested in research opportunity, internship, and PhD program.
+                I have strong interest in research, planning to pursue a Ph.D.
             </p>
 
 
