--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <p>
                 I'm currently a Computer Vision research intern at <a target="_blank"
                                                                       href="http://www.faceplusplus.com/">Megvii(Face++)</a>,
-                supervised by Xiangyu Zhang, Shaoqing Ren and <a target="_blank" href="http://jiansun.org/">Jian Sun</a>.
+                supervised by Xiangyu Zhang, and <a target="_blank" href="http://jiansun.org/">Jian Sun</a>.
                 I've interned at <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> as a Computer
                 Vision intern, supervised by Debing Zhang. I studied at <a target="_blank"
                                                                            href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
