--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             ================================================== -->
             <hr>
             <footer class="footer">
-                <h3 class="text-center"><a name="wall"></a><strong> Wall of Works</strong></h3>
+                <h3 class="text-center"><a name="wall"></a><strong>works</strong></h3>
                 <section id="photos">
                     <img src="https://raw.githubusercontent.com/yihui-he/lip-tracking-with-snake-active-contour-and-particle-filter/master/pic.png"/>
                     <img src="https://raw.githubusercontent.com/yihui-he/Edge-detection-with-zero-crossing/master/lena_1.bmp"/>
