--- a/index.html
+++ b/index.html
@@ -364,11 +364,14 @@
 
                 <a target="_blank" href="https://github.com/yihui-he/panorama"><img
                         src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
-                <div>
-                    <p>
-                        modified from <a target="_blank" href="http://daggerfs.com/">© Yangqing Jia 2013</a>
-                    </p>
+                <div class="row">
+                    <div class="span12">
+                        <p>
+                            modified from <a target="_blank" href="http://daggerfs.com/">© Yangqing Jia 2013</a>
+                        </p>
+                    </div>
                 </div>
+
             </footer>
         </div>
     </div>
