--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
             ================================================== -->
             <hr>
             <footer class="footer">
+                <div class='hidden-phone'>
                 <h3 class="text-center"><a name="wall"></a><strong>works</strong></h3>
                 <section id="photos">
                     <img src="https://raw.githubusercontent.com/yihui-he/lip-tracking-with-snake-active-contour-and-particle-filter/master/pic.png"/>
@@ -361,10 +362,11 @@
                     <img src="https://raw.githubusercontent.com/yihui-he/my-Notes/master/bop.jpg"/>
                     <img src="./assets_files/ocsi.png"/>
                 </section>
-
+                
                 <a target="_blank" href="https://github.com/yihui-he/panorama"><img
                         src="https://github.com/yihui-he/panorama/blob/master/results/yellowstone5.jpg?raw=true"></a>
                 <hr>
+                </div>
                 <div class="row">
                     <div class="span12">
                         <p>
