--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 neural network with tensorflow on CIFAR100 </a>
                         </strong>
                         <a target="_blank"
-                           href="http://nbviewer.jupyter.org/github/yihui-he/Residual-neural-network/blob/master/report/mp2_Yihui%20He.pdf">[Report]</a>
+                           href="http://nbviewer.jupyter.org/github/yihui-he/Residual-neural-network/blob/master/report/mp2_Yihui%20He.pdf">[draft]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/deep-learning-guide/blob/master/presentation/mp12.pdf">[Slides]</a>
                     </p>
@@ -312,7 +312,7 @@
                         <strong><a target="_blank"
                                    href="https://github.com/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset">Objects
                             Detection with YOLO on Artwork Dataset</a></strong> <a target="_blank"
-                                                                                   href="http://nbviewer.jupyter.org/github/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset/blob/master/Report_Yihui.pdf">[Report]</a>
+                                                                                   href="http://nbviewer.jupyter.org/github/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset/blob/master/Report_Yihui.pdf">[draft]</a>
                     </p>
                     <p class="abstract-text">
                         I design a small object detection network, which is simplified from YOLO(You Only Look Once)
