--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <strong><a target="_blank"
                                    href="https://github.com/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans">Single
                             Layer neural network with PCAwhitening Kmeans</a></strong> <a target="_blank"
-                                                                                          href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[Report]</a>
+                                                                                          href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[draft]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/deep-learning-guide/blob/master/presentation/mp12.pdf">[Slides]</a>
                     </p>
