--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/Depth-estimation-with-neural-network">understanding
-                                depth: neural network approach, with Kinect and ImageNet</a>
+                            <a target="_blank" href="https://github.com/yihui-he/Depth-estimation-with-neural-network">Images Classification with Estimated Depth Map</a>
                         </strong>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/Depth-estimation-with-neural-network/blob/master/latex/egpaper_final.pdf">[Draft]</a>
