--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                 <a name="publications"></a> Recent Publications
             </h3>
             <p>
-                Links to Google Scholar <a target="_blank"
+                Link to <a target="_blank"
                                            href="https://scholar.google.com/citations?user=z2w3scIAAAAJ&amp;hl=en"
-                                           target="_blank">[Not Available now]</a>
+                                           target="_blank">[Google Scholar]</a>
                 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
             </p>
             <div class="media">
@@ -201,6 +201,27 @@
             </h3>
             Link to my <a target="_blank" href="https://github.com/yihui-he">[github public projects]</a>
 
+            <div class="media">
+                <a class="pull-left">
+                    <img class="media-object"
+                         src="https://raw.githubusercontent.com/yihui-he/TSP-report/master/02132.png"
+                         width="96px" height="96px">
+                </a>
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>
+                            <a target="_blank" href="https://github.com/yihui-he/TSP">A Survey on Solutions for Traveling Salesman Problem</a>
+                        </strong>
+                        <a target="_blank"
+                           href="http://nbviewer.jupyter.org/github.com/yihui-he/TSP-paper/blob/master/egpaper_final.pdf">[Draft]</a>
+                    </p>
+                    <p class="abstract-text">
+we perform an evaluation and analysis of cornerstone algorithms for the metric TSP. We evaluate greedy, 2-opt, and genetic algorithms. We use
+several datasets as input for the algorithms including a small dataset, a medium-sized dataset representing
+cities in the United States, and a synthetic dataset consisting of 200 cities to test algorithm scalability.
+                    </p>
+                </div>
+            </div>
 
             <div class="media">
                 <a class="pull-left">
