--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <a target="_blank" href="https://github.com/yihui-he/TSP">A Survey on Solutions for Traveling Salesman Problem</a>
                         </strong>
                         <a target="_blank"
-                           href="http://nbviewer.jupyter.org/github.com/yihui-he/TSP-paper/blob/master/egpaper_final.pdf">[Draft]</a>
+                           href="http://nbviewer.jupyter.org/github/yihui-he/TSP-paper/blob/master/egpaper_final.pdf">[Draft]</a>
                     </p>
                     <p class="abstract-text">
 we perform an evaluation and analysis of cornerstone algorithms for the metric TSP. We evaluate greedy, 2-opt, and genetic algorithms. We use
@@ -240,8 +240,9 @@ cities in the United States, and a synthetic dataset consisting of 200 cities to
                            href="http://nbviewer.jupyter.org/github/yihui-he/Depth-estimation-with-neural-network/blob/master/presentation/depth.pdf">[Slides]</a>
                     </p>
                     <p class="abstract-text">
-                        I pretrain a convolutional neural field on large scale depth dataset, and do transfer learning
-                        on ImageNet.
+                        Previous related research efforts have been focused on image classification tasks using
+RGB images and depth image estimation but none have attempted to use depth image estimations in order to aid image classification over RGB images. Therefore, in this paper we present a way of 
+transferring domain knowledge on depth estimation to a seperate image classification task over a disjoint set of training,validation and test data. 
                     </p>
                 </div>
             </div>
