--- a/index.html
+++ b/index.html
@@ -149,14 +149,50 @@
             </p>
             <div class="media">
                 <a class="pull-left">
+                    <img class="media-object" src="./assets_files/superres.png" width="96px" height="96px">
+                </a>
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>
+                            Single Image Super-resolution with a Parameter Economic Residual-like Convolutional Neural Network
+                        </strong><br>
+                        Yudong Liang, Ze Yang, Kai Zhang, <strong>Yihui He</strong>, Jinjun Wang, Nanning Zheng
+                        <a target="_blank"
+                           href="https://arxiv.org/abs/1703.08173">[arXiv]</a>
+                    </p>
+                    <p class="abstract-text">
+                        Recent years have witnessed great success of convolutional
+                        neural network (CNN) for various problems both in low and high level visions.
+                        Especially noteworthy is the residual network which was originally
+                        proposed to handle high-level vision problems and enjoys several merits.
+                        This paper aims to extend the merits of residual network, such as skip
+                        connection induced fast training, for a typical low-level vision problem,
+                        i.e., single image super-resolution. In general, the two main challenges
+                        of existing deep CNN for supper-resolution lie in the gradient exploding/vanishing
+                        problem and large amount of parameters or computational
+                        cost as CNN goes deeper. Correspondingly, the skip connections or identity
+                        mapping shortcuts are utilized to avoid gradient exploding/vanishing
+                        problem. To tackle with the second problem, a parameter economic CNN
+                        architecture which has carefully designed width, depth and skip connections
+                        was proposed. Different residual-like architectures for image superresolution
+                        has also been compared. Experimental results have demonstrated
+                        that the proposed CNN model can not only achieve state-of-the-art
+                        PSNR and SSIM results for single image super-resolution but also produce
+                        visually pleasant results. This paper has extended the mmm 2017
+                        paper with more experiments and explanations.
+                    </p>
+                </div>
+            </div>        
+            <div class="media">
+                <a class="pull-left">
                     <img class="media-object" src="./assets_files/vehicle.png" width="96px" height="96px">
                 </a>
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
                             Surveillance</strong><br>
-                        Xiaobo Ma, Yihui He, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-                        [Contact me if interested] under review, IEEE Network
+                        Xiaobo Ma, <strong>Yihui He</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
+                        , Major Revision, Intelligent System
                     </p>
                     <p class="abstract-text">
                         Security surveillance is one of the most important issues in smart cities, especially in an era
