--- a/index.html
+++ b/index.html
@@ -161,10 +161,6 @@
                            href="https://arxiv.org/abs/1703.08173">[arXiv]</a>
                     </p>
                     <p class="abstract-text">
-                        Recent years have witnessed great success of convolutional
-                        neural network (CNN) for various problems both in low and high level visions.
-                        Especially noteworthy is the residual network which was originally
-                        proposed to handle high-level vision problems and enjoys several merits.
                         This paper aims to extend the merits of residual network, such as skip
                         connection induced fast training, for a typical low-level vision problem,
                         i.e., single image super-resolution. In general, the two main challenges
@@ -178,8 +174,7 @@
                         has also been compared. Experimental results have demonstrated
                         that the proposed CNN model can not only achieve state-of-the-art
                         PSNR and SSIM results for single image super-resolution but also produce
-                        visually pleasant results. This paper has extended the mmm 2017
-                        paper with more experiments and explanations.
+                        visually pleasant results.
                     </p>
                 </div>
             </div>        
