--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ transferring domain knowledge on depth estimation to a seperate image classifica
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/Ultrasound-Nerve-Segmentation">Medical
+                            <a target="_blank" href="https://github.com/yihui-he/u-net">Medical
                                 Image Segmentation: A survey</a>
                         </strong>
                         <a target="_blank"
