--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="#projects">Projects</a>
     <!--<a href="#teaching">Teaching</a>-->
     <a target="_blank"
-       href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/cv.pdf">CV</a>
+       href="http://nbviewer.jupyter.org/github/yihui-he/resume-template/blob/master/examples/resume-hyh.pdf">CV</a>
 </div>
 
 <body>
@@ -48,7 +48,7 @@
         <div class="text-center hidden-phone">
             <img src="assets_files/me.png" alt="photo" class="logo-image">
             <br><br>
-            yihuihe at foxmail 。com <br>
+            yihuihe AT foxmail.com <br>
             <img src="./assets_files/GitHub-Mark.png" class="icon-adjust"> <a target="_blank"
                                                                               href="http://www.github.com/yihui-he">Github</a>
             <img src="./assets_files/linkedin.png" class="icon-adjust"> <a target="_blank"
