--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Yihui He (何宜晖)
             </h3>
             <h5>
-                yihuihe at foxmail 。com</a>
+                yihuihe AT foxmail.com</a>
             </h5>
             <!-- Do I want to show a pic on the phone screen?
             <div class="text-center visible-phone">
