--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
                         <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
                             Surveillance</strong><br>
                         Xiaobo Ma, <strong>Yihui He</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-                        , Major Revision, Intelligent System
+                        , Major Revision, IEEE Intelligent System
+                        <a target="_blank"
+                           href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
                     </p>
                     <p class="abstract-text">
                         Security surveillance is one of the most important issues in smart cities, especially in an era
