--- a/index.html
+++ b/index.html
@@ -243,10 +243,12 @@
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/TSP">A Survey on Solutions for Traveling Salesman Problem</a>
+                            An Empirical Analysis of Approximation Algorithms for the Euclidean Traveling Salesman Problem
                         </strong>
                         <a target="_blank"
-                           href="http://nbviewer.jupyter.org/github/yihui-he/TSP-paper/blob/master/egpaper_final.pdf">[Draft]</a>
+                           href="https://arxiv.org/abs/1705.09058">[arXiv]</a>
+                        <a target="_blank"
+                           href="https://github.com/yihui-he/TSP">[Code]</a>
                     </p>
                     <p class="abstract-text">
 we perform an evaluation and analysis of cornerstone algorithms for the metric TSP. We evaluate greedy, 2-opt, and genetic algorithms. We use
