--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
                                            target="_blank">[Google Scholar]</a>
                 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
             </p>
+        <div class="media">
+                <div class="media-body">
+                    <p class="media-heading">
+                        <strong>
+                             Channel pruning for accelerating very deep neural networks
+                        </strong><br>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun
+                    </p>
+                    <p class="abstract-text">
+                        To be appear at ICCV 2017
+                    </p>
+                </div>
+            </div>      
             <div class="media">
                 <a class="pull-left">
                     <img class="media-object" src="./assets_files/superres.png" width="96px" height="96px">
