--- a/index.html
+++ b/index.html
@@ -148,15 +148,18 @@
                 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
             </p>
         <div class="media">
+                <a class="pull-left">
+                    <img class="media-object" src="./assets_files/structure.pdf" width="96px" height="96px">
+                </a>
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
                              Channel pruning for accelerating very deep neural networks
-                        </strong><br>
+                     </strong><br>
                         <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun
                     </p>
                     <p class="abstract-text">
-                        To be appear at ICCV 2017
+                        To be appear at ICCV 2017 as a poster paper
                     </p>
                 </div>
             </div>      
