--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <strong>
                              Channel pruning for accelerating very deep neural networks
                      </strong><br>
-                        <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun, <strong>ICCV 2017</strong>
+                        <strong>Yihui He</strong>, Xiangyu Zhang, Jian Sun, <i>ICCV 2017</i>
                         <a target="_blank"
                            href="https://arxiv.org/abs/1707.06168">[arXiv]</a>                        
                     </p>
@@ -205,7 +205,7 @@
                         <strong>Vehicle Traffic Driven Camera Placement for Better Metropolis Security
                             Surveillance</strong><br>
                         Xiaobo Ma, <strong>Yihui He</strong>, Xiapu Luo, Jianfeng Li, Xiaohong Guan
-                        , Major Revision, IEEE Intelligent System
+                        , <i>IEEE Intelligent System, Major Revision</i>
                         <a target="_blank"
                            href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
                     </p>
