--- a/index.html
+++ b/index.html
@@ -287,10 +287,11 @@ cities in the United States, and a synthetic dataset consisting of 200 cities to
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/Depth-estimation-with-neural-network">Images Classification with Estimated Depth Map</a>
+                            Images Classification with Estimated Depth Map
                         </strong>
                         <a target="_blank"
-                           href="http://nbviewer.jupyter.org/github/yihui-he/Depth-estimation-with-neural-network/blob/master/latex/egpaper_final.pdf">[Draft]</a>
+                           href="http://nbviewer.jupyter.org/github/yihui-he/Depth-estimation-with-neural-network/blob/master/latex/egpaper_final.pdf">[PDF]</a>
+                        <a target="_blank" href="https://github.com/yihui-he/Depth-estimation-with-neural-network">[Code]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/Depth-estimation-with-neural-network/blob/master/presentation/depth.pdf">[Slides]</a>
                     </p>
@@ -311,9 +312,9 @@ transferring domain knowledge on depth estimation to a seperate image classifica
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/u-net">Medical
-                                Image Segmentation: A survey</a>
+                            Medical Image Segmentation: A survey
                         </strong>
+                        <a target="_blank" href="https://github.com/yihui-he/u-net">[Code]</a>
                         <a target="_blank"
                            href="https://github.com/yihui-he/medical-image-segmentation-a-survey/blob/master/README.md">[Summary]</a>
                     </p>
@@ -335,11 +336,11 @@ transferring domain knowledge on depth estimation to a seperate image classifica
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>
-                            <a target="_blank" href="https://github.com/yihui-he/Residual-neural-network">residual
-                                neural network with tensorflow on CIFAR100 </a>
+                            residual neural network with tensorflow on CIFAR-100 
                         </strong>
                         <a target="_blank"
-                           href="http://nbviewer.jupyter.org/github/yihui-he/Residual-neural-network/blob/master/report/mp2_Yihui%20He.pdf">[draft]</a>
+                           href="http://nbviewer.jupyter.org/github/yihui-he/Residual-neural-network/blob/master/report/mp2_Yihui%20He.pdf">[PDF]</a>
+                        <a target="_blank" href="https://github.com/yihui-he/Residual-neural-network">[Code]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/deep-learning-guide/blob/master/presentation/mp12.pdf">[Slides]</a>
                     </p>
@@ -360,10 +361,10 @@ transferring domain knowledge on depth estimation to a seperate image classifica
 
                 <div class="media-body">
                     <p class="media-heading">
-                        <strong><a target="_blank"
-                                   href="https://github.com/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans">Single
-                            Layer neural network with PCAwhitening Kmeans</a></strong> <a target="_blank"
-                                                                                          href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[draft]</a>
+                        <strong>Single Layer neural network with PCAwhitening Kmeans</strong> 
+                        <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans/blob/master/report/mp1_Yihui%20He.pdf">[PDF]</a>
+                        <a target="_blank"
+                                   href="https://github.com/yihui-he/Single-Layer-neural-network-with-PCAwhitening-Kmeans">[Code]</a>
                         <a target="_blank"
                            href="http://nbviewer.jupyter.org/github/yihui-he/deep-learning-guide/blob/master/presentation/mp12.pdf">[Slides]</a>
                     </p>
@@ -385,10 +386,10 @@ transferring domain knowledge on depth estimation to a seperate image classifica
 
                 <div class="media-body">
                     <p class="media-heading">
-                        <strong><a target="_blank"
-                                   href="https://github.com/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset">Objects
-                            Detection with YOLO on Artwork Dataset</a></strong> <a target="_blank"
-                                                                                   href="http://nbviewer.jupyter.org/github/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset/blob/master/Report_Yihui.pdf">[draft]</a>
+                        <strong>Objects Detection with YOLO on Artwork Dataset</strong> 
+                        <a target="_blank" href="http://nbviewer.jupyter.org/github/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset/blob/master/Report_Yihui.pdf">[PDF]</a>
+                        <a target="_blank"
+                                   href="https://github.com/yihui-he/Objects-Detection-with-YOLO-on-Artwork-Dataset">[Code]</a>
                     </p>
                     <p class="abstract-text">
                         I design a small object detection network, which is simplified from YOLO(You Only Look Once)
@@ -405,6 +406,8 @@ transferring domain knowledge on depth estimation to a seperate image classifica
                 <div class="media-body">
                     <p class="media-heading">
                         <strong>shuttlecock detection and tracking</strong>
+                        <a target="_blank"
+                                   href="https://github.com/yihui-he/Badminton-Robot">[Code]</a>
                     </p>
                     <p class="abstract-text">
                         With guassian mixture model, I extract shuttlecock proposals. Then I use Partical filter to
