--- a/index.html
+++ b/index.html
@@ -105,11 +105,9 @@
                 my interest focus on Computer Vision, Deep Learning and Network Security.
             </p>
             <p>
-                I'm currently a Computer Vision research intern at <a target="_blank"
-                                                                      href="http://www.faceplusplus.com/">Megvii(Face++)</a>,
-                supervised by Xiangyu Zhang, and <a target="_blank" href="http://jiansun.org/">Jian Sun</a>.
-                I've interned at <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> as a Computer
-                Vision intern, supervised by Debing Zhang. I studied at <a target="_blank"
+                I'm currently a visiting student at John Hopkins University <a target="_blank" href="http://ccvl.jhu.edu/">CCVL</a>, supervised by <a target="_blank" href="http://www.cs.jhu.edu/~ayuille/">Alan Yuille</a>.
+                I've interned at <a target="_blank" href="http://www.faceplusplus.com/">Megvii(Face++)</a> supervised by Xiangyu Zhang and <a target="_blank" href="http://jiansun.org/">Jian Sun</a> 
+                , and <a target="_blank" href="http://www.deepglint.com/en/">DeepGlint</a> supervised by Debing Zhang. I studied at <a target="_blank"
                                                                            href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Barbara">UCSB</a>
                 grad school as an exchange student.</p>
             <p>Here's my <a target="_blank"
@@ -210,6 +208,8 @@
                         , <i>IEEE Intelligent System, Major Revision</i>
                         <a target="_blank"
                            href="http://arxiv.org/abs/1705.08508">[arXiv]</a>
+                        <a target="_blank"
+                           href="https://github.com/yihui-he/Vehicle-Traffic-Driven-Camera-Placement">[Code]</a>                        
                     </p>
                     <p class="abstract-text">
                         Security surveillance is one of the most important issues in smart cities, especially in an era
